--- a/style.css
+++ b/style.css
@@ -1,23 +1,79 @@
-
 *{
     margin: 0;
     padding:0;
 }
+.mainHeader{
+    background-color:steelblue;
+    text-align: center;
+    height: 80px; 
+    position: relative;
+    color: whitesmoke;
+}
 .img1{
-        
-    z-index: -1;
-    
+    z-index: -999;
     width: 100%;
+    height: auto;
     position: absolute;
     background-color:rgb(4, 25, 65);
 }
 .img1 img{
     width:100%;
-    height: 100%;
+    height: auto;
     opacity: 0.4;
-    margin-top:20px;
+    /* margin-top:20px; */
 }
-    table
+ul{
+    position: relative;
+    list-style-type: none;
+    margin: 0%;
+    padding: 0%;
+    overflow: hidden;
+    background-color:  #a3b8e4;
+}
+li{
+    float: left;
+}
+li a, .dropbtn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 7px 20px;
+    text-decoration: none;
+}
+li a:hover, .dropdown:hover .dropbtn
+  {
+    background-color: #ffffff;
+    color: #a3b8e4;
+   }
+/* li.dropdown {
+
+ position: relative;  
+   display: inline-block;
+} */
+.dropdown-content {
+   display: none;
+   position: absolute;
+   background-color: #f9f9f9;
+   min-width: 160px;
+   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+   z-index: 1;
+}
+.dropdown-content a {
+   color: black;
+   padding: 12px 16px;
+   text-decoration: none;
+   display: block;
+   text-align: left;
+}
+.dropdown-content a:hover 
+{
+   background-color: #f1f1f1;
+}
+.dropdown:hover .dropdown-content
+{
+   display: block;
+}
+table
         {
             border-collapse: collapse;
             width: 60%;
@@ -27,293 +83,147 @@
             font-family: Georgia, 'Times New Roman', Times, serif;
             padding: 15px;
         }
-        tr, td
-        {    
+    tr, td{    
             position: relative;
             left: 15px;       
             padding: 12px;
             border-bottom: 1px solid white;
-    
-        }
-     th{
-         
+    }
+    th{
             background-color: rgb(117, 180, 231);
             text-align: center;
-            padding: 10px 10px;
+            padding: 10px 20px;
             text-align: left;
             opacity: 0.6;
-            
-        }
-        
-
-        td img{
-            
+    }
+    td img{
             width:35px;
-            height: 25px;
-            padding-right: 30px;
-
-            }
-        td:hover
-        {
+            height: 20px;
+            padding-right: 5px;
+    }
+    td:hover{
            transform: scale(1.1);
             transition: 500ms;
-        }
-        h1{
-            background-color:steelblue;
-            text-align: center;
-            height: 90px;
-            padding-top: 50px;
-            position: relative;
-            color: whitesmoke;
-
-               
-         }
-         footer{
-             position: relative;
-             top: 50px;
-             background: steelblue;
-             text-align: center;
-             height:50px;
-             padding-top: 50px;
-             color: whitesmoke; 
-         }
-        
-         ul{
-             position: relative;
-             bottom: 16px;
-             list-style-type: none;
-             margin: 0%;
-             padding: 0%;
-             overflow: hidden;
-             background-color:  #a3b8e4;
-             
-         }
-         li{
-             float: left;
-         }
-         
-         li a, .dropbtn {
-            display: inline-block;
-             color: white;
-             text-align: center;
-             padding: 15px;
-             text-decoration: none;
-         }
-     li a:hover, .dropdown:hover .dropbtn
-           {
-             background-color: #ffffff;
-             color: #a3b8e4;
-            }
-      li.dropdown {
-
-          position: relative;  
-            display: inline-block;
-        }
-        
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #f9f9f9;
-            min-width: 160px;
-            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-            z-index: 1;
-        }
-        
-        .dropdown-content a {
-            color: black;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-            text-align: left;
-        }
-        
-        .dropdown-content a:hover 
-        {
-            background-color: #f1f1f1;
-        }
-        
-        .dropdown:hover .dropdown-content
-         {
-            display: block;
-        }
-        #wrapper{
+    }
+    .footerDiv{
+        width: 100%;
+        position: fixed;
+        bottom: 0;
+        left: 0; 
+        background: steelblue;
+        text-align: center;
+        height:30px;
+        color: whitesmoke; 
+    }
+    #wrapper{
             display: flex;
             flex-wrap: wrap;
-            width: 100%;
             margin-top: 50px;
-           
+            width: 100%;
+    }
+    .box{
+        border-radius:100px;
+        border: 5px solid #ffffff;
+        margin-left: 8px;
+        margin-top: 15px;
+        position: relative;
+        overflow: hidden;
+        box-shadow: rgba(0,0,0,0.5) 9px 9px 20px;
+    }
+    img{
+        width: 200px;
+        height: 200px;
         }
-        .box{
-
-            border-radius:100px;
-            border: 5px solid #ffffff;
-            margin-left: 8px;
-            margin-top: 15px;
-            position: relative;
-            overflow: hidden;
-            box-shadow: rgba(0,0,0,0.5) 9px 9px 20px;
-           
-        }
-        
-        img{
-            width: 200px;
-            height: 200px;
-        }
-       
-        .box img{
-            border-radius:100px;
-        }
-        
-        .box div{
-        
-            width:200px;
-            height:105px;
-            background: #000;
-            text-align: center;
-            border-radius: 100px;
-            padding: 95px 0 0 0;
-            color:white;
-        }
-        
-        .effect1 div{
-            position: absolute;
-            top:0;
-            left:0;
-            opacity:0;
-            transition:opacity 700ms;
-            color:white;
-        
-        }
-        
-        .effect1 div:hover{
-          opacity: 0.8;
-        }
-        
-        .effect2 img{
-        
+    .box img{
+        border-radius:100px;
+    }
+    .box div{
+        width:200px;
+        height:105px;
+        background: #000;
+        text-align: center;
+        border-radius: 100px;
+        padding: 95px 0 0 0;
+        color:white;
+    }
+    .effect1 div{
+        position: absolute;
+        top:0;
+        left:0;
+        opacity:0;
+        transition:opacity 700ms;
+        color:white;
+    }
+    .effect1 div:hover{
+        opacity: 0.8;
+    }
+    .effect2 img{
         position: absolute;
         top:0;
         left: 0;
         transition:margin-left 800ms;
         color:white;
-        }
-        
-        
-        .effect2:hover img{
-          margin-left: -200px;
-        }
-        
-        .effect3 div{
-        
-            position: absolute;
-            opacity: 0.8;
-            top:0;
-            left:0;
-            margin-left: -200px;
-            transition:margin-left 800ms;
-            color:white;
-        }
-        
-        .effect3:hover div{
-          margin-left: 0;
-        
-        
-        }
-        
-        
-        .effect4 img{
-        
+    }
+    .effect2:hover img{
+        margin-left: -200px;
+    }
+    .effect3 div{
+        position: absolute;
+        opacity: 0.8;
+        top:0;
+        left:0;
+        margin-left: -200px;
+        transition:margin-left 800ms;
+        color:white;
+    }
+    .effect3:hover div{
+        margin-left: 0;
+    }
+    .effect4 img{
         position: absolute;
         top:0;
         left: 0;
-        
-        }
-        
-        
-        .effect4 div{
-        
-            opacity: 0.8;
-            transform:scale(0);
-            transition-duration:500ms;
-            color:white;
-        
-        }
-        
-        .effect4:hover div{
-        
-            transform:scale(1);
-        }
-        
-        
-        .effect5 img{
-        
+    }
+    .effect4 div{
+        opacity: 0.8;
+        transform:scale(0);
+        transition-duration:500ms;         
+        color:white;
+    }
+    .effect4:hover div{
+        transform:scale(1);
+    }
+    .effect5 img{
         position: absolute;
         top:0;
         left: 0;
-        
-        }
-        
-        
-        .effect5 img{
-        
-        
-            transform:scale(1);
-            transition-duration:500ms;
-            color:white;
-        
-        }
-        
-        .effect5:hover img{
-        
-            transform:scale(0);
-        }
-        
-        
-        .effect6 img{
-        
+    }
+    .effect5 img{
+        transform:scale(1);
+        transition-duration:500ms;
+        color:white;
+    }
+    .effect5:hover img{
+        transform:scale(0);
+    }
+    .effect6 img{
         position: absolute;
         top:0;
         left:0;
         overflow: hidden;
         transition-duration:1200ms;
-        
-        }
-        
-        .effect6:hover img{
-        
-            box-shadow: none;
-            transform:rotate(360deg);
-        }
-        .effect7 img{
-        
-            position: absolute;
-            top:0;
-            left:0;
-            overflow: hidden;
-            transition-duration:1200ms;
-            
-            }
-            
-            .effect7:hover img{
-            
-                box-shadow: none;
-                transform:rotate(360deg);
-            }
-            .effect8 img{
-        
-                position: absolute;
-                top:0;
-                left:0;
-                overflow: hidden;
-                transition-duration:1200ms;
-                
-                }
-                
-                .effect8:hover img{
-                
-                    box-shadow: none;
-                    transform:rotate(360deg);
-                }
-         
+    }
+    .effect6:hover img{
+        box-shadow: none;
+        transform:rotate(360deg);
+    }
+    .effect7 img{
+        position: absolute;
+        top:0;
+        left:0;
+        overflow: hidden;
+        transition-duration:1200ms;        
+    }
+  
          
     
